--- a/index.html
+++ b/index.html
@@ -9,52 +9,57 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
   </head>
 <body>
-  <div class="container text-center w-50 mt-4">
+  <div class="container-fluid text-center">
     <div class="row row-cols-1">
       <div class="col"><p class="h1">Live Weather Application</p></div>
       <div class="col" class="input-group mb-3 w-50 p-4 mt-4">
         <input type="text" class="form-control text-center" aria-label="city" aria-describedby="inputGroup-sizing-default" placeholder="Enter City"  id="cityName"></class=>
       </div>
        <!-- Button -->
-      <div class="col-12 col-md-6 mt-4 mx-auto">
+      <!-- <div class="col-12 col-md-6 mt-4 mx-auto">
         <button id="btn" type="button" class="btn btn-outline-success w-100" onclick="weatherApp()">Submit</button>
-      </div>
+      </div> -->
       
-  </div>
-  <div class="card mx-auto mt-4" style="width: 8rem;border: 2px solid black; border-radius: 100px;background: transparent;color: white;">
-    <div class="card-body">
+      <!-- here was the div that had moved -->
+        <!-- Temp output card start from here -->
+      <div class="card mx-auto mt-4" style="width:10rem;height: 10rem;border: 2px solid rgb(255, 255, 255); border-radius:50%;background: transparent;">
+       <div class="card-body">
       <h6 class="card-title">Current Temperature</h6>
-      <p class="card-text mt-0 text-center" id="temp"></p>
+      <p class="card-text mt-4 text-center" id="temp"></p>
     </div>
   </div>
+
+  
   <!-- values -->
-  <div class="container mt-4">
+  
     <div class="row g-3"> <!-- gap between columns (cards) -->
       
       <!-- First Card -->
       <div class="col-12 col-md-6">
-        <div class="card h-100 border border-dark bg-transparent">
+        <div class="card h-100 border border-light bg-transparent">
           <ul class="list-group list-group-flush p-2">
-            <li class="list-group-item mb-1 bg-transparent" id="sunRise">An item</li>
-            <li class="list-group-item mb-1 bg-transparent" id="sunSet">A second item</li>
-            <li class="list-group-item mb-1 bg-transparent" id="humidity">A third item</li>
+            <li class="list-group-item mb-1 bg-transparent" id="sunRise">SunRise</li>
+            <li class="list-group-item mb-1 bg-transparent" id="sunSet">SunSet</li>
+            <li class="list-group-item mb-1 bg-transparent" id="humidity">Humidity</li>
           </ul>
         </div>
       </div>
   
       <!-- Second Card -->
       <div class="col-12 col-md-6">
-        <div class="card h-80 border border-dark bg-transparent">
+        <div class="card h-80 border border-light bg-transparent">
           <ul class="list-group list-group-flush p-2">
-            <li class="list-group-item mb-1 bg-transparent" id="countryName">An item</li>
-            <li class="list-group-item mb-1 bg-transparent" id="clock">A third item</li>
+            <li class="list-group-item mb-1 bg-transparent" id="countryName">Country</li>
+            <li class="list-group-item mb-1 bg-transparent" id="clock"></li>
           </ul>
         </div>
       </div>
   
     </div>
-  </div>
-
+    <div class="col-12 col-md-6 mt-4 mx-auto">
+      <button id="btn" type="button" class="btn btn-outline-light w-100" onclick="weatherApp()">Submit</button>
+    </div>
+</div>
 
   
 <!-- <div class="container" id="temp"></div>  -->
