--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.34/moment-timezone-with-data.min.js"></script>
   </head>
 <body>
   <div class="container-fluid text-center">
@@ -15,10 +16,7 @@
       <div class="col" class="input-group mb-3 w-50 p-4 mt-4">
         <input type="text" class="form-control text-center" aria-label="city" aria-describedby="inputGroup-sizing-default" placeholder="Enter City"  id="cityName"></class=>
       </div>
-       <!-- Button -->
-      <!-- <div class="col-12 col-md-6 mt-4 mx-auto">
-        <button id="btn" type="button" class="btn btn-outline-success w-100" onclick="weatherApp()">Submit</button>
-      </div> -->
+
       
       <!-- here was the div that had moved -->
         <!-- Temp output card start from here -->
@@ -26,13 +24,17 @@
        <div class="card-body">
       <h6 class="card-title">Current Temperature</h6>
       <p class="card-text mt-4 text-center" id="temp"></p>
-    </div>
-  </div>
-
+      </div>
+      </div>
+      </div>
+              <!-- Button -->
+        <div class="col-12 col-md-6 mt-4 mx-auto">
+        <button id="btn" type="button" class="btn btn-outline-success w-100" onclick="weatherApp()">Submit</button>
+        </div>
   
-  <!-- values -->
+   <!-- values -->
   
-    <div class="row g-3"> <!-- gap between columns (cards) -->
+    <div class="row g-3 mx-auto mt-4"> <!-- gap between columns (cards) -->
       
       <!-- First Card -->
       <div class="col-12 col-md-6">
@@ -40,7 +42,9 @@
           <ul class="list-group list-group-flush p-2">
             <li class="list-group-item mb-1 bg-transparent" id="sunRise">SunRise</li>
             <li class="list-group-item mb-1 bg-transparent" id="sunSet">SunSet</li>
-            <li class="list-group-item mb-1 bg-transparent" id="humidity">Humidity</li>
+               <!-- <li class="list-group-item mb-1 bg-transparent" id="humidity">Humidity</li> -->
+               <li class="list-group-item mb-1 bg-transparent" id="condition">Weather Condition
+               </li>
           </ul>
         </div>
       </div>
@@ -51,14 +55,15 @@
           <ul class="list-group list-group-flush p-2">
             <li class="list-group-item mb-1 bg-transparent" id="countryName">Country</li>
             <li class="list-group-item mb-1 bg-transparent" id="clock"></li>
+            <li class="list-group-item mb-1 bg-transparent" id="LocalClock">Local Time</li>
           </ul>
         </div>
       </div>
   
     </div>
-    <div class="col-12 col-md-6 mt-4 mx-auto">
+    <!-- <div class="col-6 col-md-6 mt-4 mx-auto">
       <button id="btn" type="button" class="btn btn-outline-light w-100" onclick="weatherApp()">Submit</button>
-    </div>
+    </div> -->
 </div>
 
   
