--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
               <!-- Button -->
         <div class="col-12 col-md-6 mt-4 mx-auto">
-        <button id="btn" type="button" class="btn btn-outline-success w-100" onclick="weatherApp()">Submit</button>
+        <button id="btn" type="button" class="btn btn-primary w-100 opacity-50" onclick="weatherApp()">Submit</button>
         </div>
   
    <!-- values -->
@@ -61,9 +61,6 @@
       </div>
   
     </div>
-    <!-- <div class="col-6 col-md-6 mt-4 mx-auto">
-      <button id="btn" type="button" class="btn btn-outline-light w-100" onclick="weatherApp()">Submit</button>
-    </div> -->
 </div>
 
   
